# pidgin-embeddedvideo

./: AUTHORS  ChangeLog  FAQ.md  INSTALL.md  InstallationGuide.md  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  description-pak
downloads/: pidgin-embeddedvideo_1.2-1_amd64.deb  pidgin-embeddedvideo_1.2-1_i386.deb  pidgin-embeddedvideo_1.2-1lucid_amd64.deb  pidgin-embeddedvideo_1.2-1lucid_i386.deb
src/: Makefile.am  Makefile.in  config.h  embeddedvideo.c  videoframes.c  videoframes.h  websites.c  websites.h
src/websites/: Makefile.am  Makefile.in  collegehumor.c  dailymotion.c  metacafe.c  trilulilu-audio.c  trilulilu-image.c  vimeo.c  yahoo-video.c
tags/1.0/: configure.ac
tags/1.0/src/: Makefile.in  websites.h
tags/1.0/trunk/: configure
tags/1.0/trunk/src/websites/: Makefile.am  google-video.c  myspace-video.c  trilulilu-image.c  youtube.c
tags/1.0/websites/: vimeo.xml
tags/1.1/: Makefile.in  aclocal.m4
tags/1.1/src/: websites.c
tags/1.1/src/websites/: metacafe.c  yahoo-video.c
tags/1.2/: configure.ac
tags/1.2/src/websites/: Makefile.am  metacafe.c  trilulilu-audio.c  trilulilu-video.c  youtube-short.c  youtube.c
trunk/: AUTHORS  ChangeLog  Makefile.in  README  aclocal.m4  configure  description-pak
trunk/src/: Makefile.am  Makefile.in  config.h  embeddedvideo.c  videoframes.c  videoframes.h  websites.c
trunk/src/websites/: Makefile.am  Makefile.in  collegehumor.c  dailymotion.c  google-video.c  myspace-video.c  trilulilu-audio.c  trilulilu-image.c  trilulilu-video.c  xfire.c  yahoo-video.c  youtube.c
trunk/websites/: Makefile.in  youtube.xml
websites/: Makefile.am
wiki/: FAQ.wiki  HowToAddANewVideoSite.wiki  InstallationGuide.wiki  Screenshots.wiki
